--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,3 @@
 spring:
-  datasource:
-    url:
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-
-  jpa:
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-        format_sql: debug
-      default_batch_fetch_size: 100
-
-logging:
-  level:
-    org.hibernate.SQL: debug
+  profiles:
+    include: real-db
